sass/stylesheets/sass/screen.scss
/* ... */
// HOST INTERFACES

.interface-container {
	width: fit-content;
	width: -moz-fit-content;
	padding-left: 0;

	&:not(.interface-container-header):not(:empty) {
		margin-bottom: 5px;

		& ~ .interface-container:not(:empty) {
			border-top: 1px solid $form-border-color;
			padding-top: 10px;
		}
	}

	&:empty {
		display: none;
	}

	.interface-row {
		display: grid;
		grid-template-columns: 26px 36px 225px 175px 85px 100px 20px 1fr;
		grid-template-rows: 24px 1fr;
		gap: 5px;

		&:not(:first-of-type) {
			margin-top: 5px;
		}

		&[data-type] .interface-cell-details {
			display: none;
			grid-column: 1/-1;
		}

		.interface-cell {
			align-self: center;

			.interface-btn-toggle {
				display: none;
				@extend .btn-link;
			}

			&.interface-cell-header {
				color: $font-alt-color;
				text-align: left;
			}

			.table-forms-td-left,
			.table-forms-td-right {
				padding-bottom: 0;
			}
		}
	}
}

// Host interface accordion for SNMP specific styles.
.interface-row.list-accordion-item[data-type="2"] {
	&.list-accordion-item-closed {
		.interface-btn-toggle {
			@extend .btn-widget-expand;
		}
	}

	&.list-accordion-item-opened {
		.interface-btn-toggle {
			@extend .btn-widget-collapse;
		}

		.list-accordion-item-body {
			display: block;
		}
	}

	.interface-btn-toggle {
		display: inline-block;
		@extend %btn-widget;
	}
}

// Popup with debug data of request processing to Zabbix server.
.debug-modal {
	&.overlay-dialogue.modal {
		.overlay-dialogue-body {
			overflow-x: auto;

			&::-webkit-scrollbar {
				height: 9px;
			}
		}
	}

	.logitems {
		pre {
			white-space: nowrap;
		}
	}

	.logtotalms {
		color: $font-alt-color;
		float: left;
		line-height: 24px;
	}
}

// Table column styles
#itemsTable {
	.table-col-handle { width: 26px; }
	.table-col-no { width: 20px; }
	.table-col-name-normal { width: 285px; }
	.table-col-name { width: 365px; }
	.table-col-type { width: 85px; }
	.table-col-function { width: 85px; }
	.table-col-draw-style { width: 85px; }
	.table-col-y-axis-side { width: 85px; }
	.table-col-colour { width: 55px; }
	.table-col-action { width: 55px; }
}

z-select,
.z-select {
	&.z-select-host-interface {
		.description:not(:empty) {
			display: block;
			margin-top: 5px;
			color: $input-placeholder-color;
		}

		&[disabled],
		li[disabled] {
			.description:not(:empty) {
				color: $form-disabled-font-color;
			}
		}
	}
}

.multiselect-description-container {
	display: flex;
	align-items: center;

	> .multiselect-control {
		margin-right: 5px;
	}
}

// Users permissions tab.
.rules-status-container {
	> span {
		text-transform: none;
		margin: 3px 3px 3px 0;

		&:last-of-type {
			margin-right: 0;
		}
	}

	> .status-green:not(:last-of-type) {
		border-right: 1px solid darken(desaturate($alt-green, 10%), 20%);
	}

	> .status-grey:not(:last-of-type) {
		border-right: 1px solid $form-disabled-border-color;
	}
}

// Used in form lists to separate input elements on sections.
.input-section-header {
	padding-top: 10px;
}

.modal-popup-preprocessing {
	.preprocessing-list .step-name {
		flex: 0 0 180px;
	}

	.preprocessing-list {
		min-width: unset;
		max-width: unset;
	}
}

.modal-popup-medium,
.modal-popup-large,
.modal-popup-static,
.modal-popup-preprocessing {
	.table-forms-container {
		border: none;
	}

	.ui-tabs-nav {
		position: sticky;
		top: 0;
		background: $header-bg-color;
		z-index: 3;
	}

	.textarea-flexible {
		max-height: 200px;
		overflow-y: auto;
	}
}

.global-macro-table,
.inherited-macros-table,
.host-macros-table {
	.table-col-value,
	.table-col-template-value {
		width: 300px;
	}
}

.active-readonly {
	&[readonly] {
		color: $font-color;
		background-color: $form-bg-color !important;
		border-color: $form-border-color;
	}
}

.valuemap-list-table {
	tbody {
		td {
			border-bottom: 1px solid $table-border-color;
		}

		tr:first-child td {
			border-top: 1px solid $table-border-color;
		}
	}
}

.mappings-table {
	display: grid;
	grid-template-columns: auto auto minmax(auto, 100%);

	& > div {
		text-align: left;
	}

	// For every 3th starting from 2nd child.
	& > div:nth-child(3n + 2) {
		text-align: center;
		padding: 0 10px;
	}
}

.valuemap-checkbox {
	margin-top: 10px;
}

.overlay-dialogue {
	.valuemap-list-table {
		td {
			vertical-align: top;
		}
	}
}

.subscriptions-table {

	th {
		color: $font-alt-color;
	}
}

.import-compare {
	display: flex;
	max-height: calc(100vh - 190px);

	.toc {
		flex: 20%;
		overflow-y: auto;
		overflow-x: hidden;
	}

	.diff {
		flex: 80%;
		margin-left: 5px;
		overflow: auto;
		border: 1px dashed $form-border-color;
	}
}

.list-dashed {
	li {
		margin-left: 1em;

		&::before {
			content: '\2013';
			float: left;
			margin-left: -1em;
		}
	}
}

.overlay-dialogue #host-form {
	#tagsFormList,
	#macrosFormList,
	#valuemap-formlist {
		.table-forms-td-left {
			display: none;
		}

		.table-forms-td-right {
			width: 100%;
		}
	}
}

.linked-templates {
	> .table-forms {
		margin-bottom: 5px;
		line-height: 24px;

		td, th {
			padding: 0 5px 0 0;

			&:last-child {
				width: 0;
				padding-right: 0;
			}
		}
	}
}

// Report -> Audit details styles.

.audit-details-popup-wrapper {
	margin: 5px 10px;

	.audit-details-popup-textarea {
		width: 100%;
		height: 135px;
	}
}

.audit-details-wrapper {
	display: flex;
	justify-content: space-between;

	.audit-show-details-btn-wrapper {
		margin: 0 5px 0 5px;
	}
}

// Geomap widget.
.geomap-filter-button,
.navigate-home-button {
	background-image: url($sprite-path);
	background-repeat: no-repeat;
}
.geomap-filter-button {
	background-position: -243px -543px !important;
}
.navigate-home-button {
	background-position: -117px -506px !important;
}
.geomap-filter {
	border: 2px solid rgba($ui-border-color, .4);
	background-color: $ui-bg-color;
	padding: 10px 30px 5px 10px;
	position: absolute;
	margin-right: -2px;
	margin-top: 5px;
	display: none;
	right: 0;
}
.geomap-filter.collapsed {
	display: table;
}
.geomap-filter li {
	width: calc(100% + 20px);
}
/* ... */

